tests/negative/neg_pr118e2_indexed_paths.safe
-- Test: neg_pr118e2_indexed_paths
-- Description: Same-root indexed paths that are not statically singleton and
--   disjoint remain conservatively rejected after PR11.10b.
-- Expected: REJECT mut_alias_conflict

package neg_pr118e2_indexed_paths

   subtype count is integer (0 to 20);
   subtype slot is integer (1 to 2);

   type node is record
      value : count;
      next  : node;

   type row is array (slot) of node;

   function touch (left : mut node; right : node)
      return;

   function run
      owner : row = ((value = 1, next = null), (value = 2, next = null));
      left_index : slot = 1;
      right_index : slot = 2;

      touch (owner (left_index), owner (right_index));
